@@ -1,7 +1,7 @@
 ## Interface: 60200
 ## Title: IGAS_UI
 ## Author: kurapica.igas@gmail.com
-## Version: v57
+## Version: v58
 ## Notes: UI demo for IGAS
 ## eMail: kurapica.igas@gmail.com
 ## URL: http://github.com/kurapica
